vineyard-configuration/ingress/nginx-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-fe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - dev.vineyard
    secretName: letsencrypt-nginx
  rules:
  - host: dev.vineyar
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service-dev
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service-dev-internal
            port:
              number: 80
      - pathType: Prefix
        path: /solr
        backend:
          service:
            name: solr-external-service
            port:
              number: 8983
