vineyard-configuration/ingress/nginx-ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - stage.vineyard.work
    secretName: letsencrypt-nginx
  rules:
  - host: stage.vineyard.work
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service
            port:
              number: 80
      # - pathType: Prefix
      #   path: /solr
      #   backend:
      #     service:
      #       name: solr-external-service
      #       port:
      #         number: 8983
